Started adding schedule directive

--- a/index.html
+++ b/index.html
@@ -56,12 +56,9 @@
                      class="k-header">{{ dropTargetText }}
                 </div>
             </div>
-            <!--Range Slider-->
-            <div
-                    kendo-range-slider
-                    k-options="rangeSliderOptions" id="rangeSlider1">
-                <input/>
-                <input/>
+            <!--Schedule-->
+            <div id="schedule">
+                <schedule></schedule>
             </div>
         </div>
     </div>
