Added schedule day directive

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             </div>
             <!--Schedule-->
             <div id="schedule">
-                <schedule></schedule>
+                <schedule-hours></schedule-hours>
+                <schedule-day></schedule-day>
             </div>
         </div>
     </div>
