--- a/schedule-day.html
+++ b/schedule-day.html
@@ -1,4 +1,4 @@
 <div class="schedule-day-container">
-    <div class="schedule-day-header">SUN</div>
-    <div class="schedule-day-item" ng-repeat="hour in hoursInDay"></div>
+    <div class="schedule-day-header">{{day.dayName}}</div>
+    <div class="schedule-day-item" ng-repeat="hour in day.hours">{{hour.dayName + ' ' + hour.multiplier}}</div>
 </div>
