Updated css of Error and Success messages

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </p>
         <!--Success-->
         <p class="alert alert-success">
-            <i class="fa fa-check-square-o"></i>
+            <i class="fa fa-check-circle-o"></i>
             Success
         </p>
     </div>
